[gd_scene load_steps=16 format=3 uid="uid://7naqdk3ld2f0"]

[ext_resource type="Script" path="res://acerte_o_formato/scripts/pause.gd" id="1_xv6wr"]
[ext_resource type="Texture2D" uid="uid://c83oxh7rv8o28" path="res://acerte_o_formato/assets/fundos_telas/w_pause.png" id="2_5oy6k"]
[ext_resource type="Texture2D" uid="uid://xi38aj4q466w" path="res://acerte_o_formato/assets/botoes/play_pause.png" id="3_bb7mj"]
[ext_resource type="Texture2D" uid="uid://djr388ljgcc25" path="res://acerte_o_formato/assets/botoes/reset_pause.png" id="4_4ug23"]
[ext_resource type="Texture2D" uid="uid://dwbt8i5w1yagc" path="res://acerte_o_formato/assets/botoes/x_pause.png" id="5_vve4p"]
[ext_resource type="AudioStream" uid="uid://mrphqt25xpp6" path="res://acerte_o_formato/assets/sounds/Video Game Jump Sound Effect 1.wav" id="6_1debi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e3b6k"]
texture = ExtResource("3_bb7mj")
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6qbi3"]
texture = ExtResource("3_bb7mj")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fna2u"]
texture = ExtResource("3_bb7mj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fvxiy"]
texture = ExtResource("4_4ug23")
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i3ecy"]
texture = ExtResource("4_4ug23")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uk48y"]
texture = ExtResource("4_4ug23")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hvw8e"]
texture = ExtResource("5_vve4p")
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4a61v"]
texture = ExtResource("5_vve4p")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fwiow"]
texture = ExtResource("5_vve4p")

[node name="pause" type="Node"]
script = ExtResource("1_xv6wr")

[node name="PauseOpcoes" type="TextureRect" parent="."]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -365.0
offset_top = -375.5
offset_right = 365.0
offset_bottom = 375.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("2_5oy6k")

[node name="continuar" type="Button" parent="."]
process_mode = 3
z_index = 5
offset_left = 1086.0
offset_top = 547.0
offset_right = 1271.0
offset_bottom = 731.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_e3b6k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6qbi3")
theme_override_styles/normal = SubResource("StyleBoxTexture_fna2u")

[node name="recomecar" type="Button" parent="."]
process_mode = 3
z_index = 5
offset_left = 868.0
offset_top = 542.0
offset_right = 1051.0
offset_bottom = 727.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_fvxiy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i3ecy")
theme_override_styles/normal = SubResource("StyleBoxTexture_uk48y")

[node name="voltar_tela_inicial" type="Button" parent="."]
process_mode = 3
z_index = 5
offset_left = 650.0
offset_top = 508.0
offset_right = 837.0
offset_bottom = 734.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_hvw8e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4a61v")
theme_override_styles/normal = SubResource("StyleBoxTexture_fwiow")

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1debi")

[connection signal="pressed" from="continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="recomecar" to="." method="_on_recomecar_pressed"]
[connection signal="pressed" from="voltar_tela_inicial" to="." method="_on_voltar_tela_inicial_pressed"]
